1, carousels touch slide;

--- a/weijinsuo/index.html
+++ b/weijinsuo/index.html
@@ -539,7 +539,7 @@
 				</section>
 				<!-- /新闻列表 -->
 				<!-- 合作伙伴 -->
-				<section id="partner">
+				<section id="partner" class="hidden-xs hidden-sm">
 					<div class="container text-center">
 						<h3>合作伙伴</h3>
 						<ul class="center-block">
